--- a/local.conf
+++ b/local.conf
@@ -1,37 +1,30 @@
 [[local|localrc]]
-disable_service n-net
-enable_service q-svc
-enable_service q-agt
-enable_service q-dhcp
-enable_service q-l3
-enable_service q-meta
-enable_service neutron
-enable_service q-vpn
-enable_service n-cauth
 
-FIXED_RANGE=10.1.0.0/24
-FIXED_NETWORK_SIZE=256
-NETWORK_GATEWAY=10.1.0.1
-PRIVATE_SUBNET_NAME=privateA
-
-PUBLIC_SUBNET_NAME=public-subnet
-FLOATING_RANGE=172.24.4.0/24
-PUBLIC_NETWORK_GATEWAY=172.24.4.10
-Q_FLOATING_ALLOCATION_POOL="start=172.24.4.11,end=172.24.4.29"
-
-IPSEC_PACKAGE=libreswan
-SCREEN_LOGDIR=/opt/stack/screen-logs
-IMAGE_URLS="http://cloud-images.ubuntu.com/releases/14.04.1/release/ubuntu-14.04-server-cloudimg-amd64.tar.gz,http://download.cirros-cloud.net/0.3.3/cirros-0.3.3-x86_64-uec.tar.gz"
-# IP_VERSION=6
-
-ADMIN_PASSWORD=password
-MYSQL_PASSWORD=password
+DATABASE_PASSWORD=password
 RABBIT_PASSWORD=password
 SERVICE_PASSWORD=password
-SERVICE_TOKEN=tokentoken
+SERVICE_TOKEN=password
+ADMIN_PASSWORD=password
 
-Q_USE_DEBUG_COMMAND=True
+# The DevStack plugin defaults to using the ovn branch from the official ovs
+# repo.  You can optionally use a different one.  For example, you may want to
+# use the latest patches in blp's ovn branch:
+#OVN_REPO=http://github.com/blp/ovn-reviews.git
+#OVN_BRANCH=origin/ovn
 
-[[post-config|/$Q_PLUGIN_CONF_FILE]]
-[ml2]
-extension_drivers=port_security
+enable_plugin networking-ovn http://git.openstack.org/stackforge/networking-ovn
+enable_service ovn
+
+# Use Neutron instead of nova-network
+disable_service n-net
+enable_service q-svc
+# OVN uses the DHCP and L3 agents for now.  They will be dropped once the
+# corresponding functionality is available in OVN.
+enable_service q-dhcp
+enable_service q-l3
+# Enable q-meta once nova is being used.
+#enable_service q-meta
+
+# We have to disable the neutron L2 agent. OVN does not use the L2 agent.
+disable_service q-agt
+enable_service n-cauth
