Don't specify image_url

--- a/local.conf
+++ b/local.conf
@@ -21,7 +21,7 @@ Q_FLOATING_ALLOCATION_POOL="start=172.24.4.11,end=172.24.4.29"
 
 IPSEC_PACKAGE=libreswan
 SCREEN_LOGDIR=/opt/stack/screen-logs
-IMAGE_URLS="http://cloud-images.ubuntu.com/releases/14.04.1/release/ubuntu-14.04-server-cloudimg-amd64.tar.gz,http://download.cirros-cloud.net/0.3.3/cirros-0.3.3-x86_64-uec.tar.gz"
+# IMAGE_URLS="http://cloud-images.ubuntu.com/releases/14.04.1/release/ubuntu-14.04-server-cloudimg-amd64.tar.gz,http://download.cirros-cloud.net/0.3.3/cirros-0.3.3-x86_64-uec.tar.gz"
 # IP_VERSION=6
 
 ADMIN_PASSWORD=password
